feat: update favicon to PNG format and reorganize HTML structure

--- a/apps/rengifo/index.html
+++ b/apps/rengifo/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="lenguage" content="spanish" />
-		<meta name="author" content="Relatos de Barrios" />
-		<meta name="audience" content="all" />
-		<meta
-    name="description"
-			content="Relatos de Barrios busca difundir el valor patrimonial e histórico de éste y otros barrios de La Serena ligados al patrimonio industrial, destacando la experiencia social y patrimonial detrás de la vida de sus habitantes."
-      />
-		<meta name="keywords" content="patrimonio, la serena, arquitectura" />
-		<meta name="robots" content="index, nofollow" />
-		<title>Relatos de Barrios | Conjunto Habitacional Rengifo</title>
-    <link rel="icon" type="image/svg+xml" href="/src/assets/icons/favicon.svg" />
-    <!-- <link rel="preload" href="/src/assets/fonts/Raleway-Medium.woff2" as="font" type="font/woff2" crossorigin> -->
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="lenguage" content="spanish" />
+  <meta name="author" content="Relatos de Barrios" />
+  <meta name="audience" content="all" />
+  <meta name="description"
+    content="Relatos de Barrios busca difundir el valor patrimonial e histórico de éste y otros barrios de La Serena ligados al patrimonio industrial, destacando la experiencia social y patrimonial detrás de la vida de sus habitantes." />
+  <meta name="keywords" content="patrimonio, la serena, arquitectura" />
+  <meta name="robots" content="index, nofollow" />
+  <title>Relatos de Barrios | Conjunto Habitacional Rengifo</title>
+  <link rel="icon" type="image/png" href="/src/assets/icons/favicon.png" />
+  <!-- <link rel="preload" href="/src/assets/fonts/Raleway-Medium.woff2" as="font" type="font/woff2" crossorigin> -->
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/index.jsx"></script>
+</body>
+
 </html>
